--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "grunt-autoprefixer": "~1.0.1",
     "grunt-zip": "~0.7.0",
     "grunt": "~0.4.0",
-    "node-sass": "~0.9.3"
+    "node-sass": "~0.9.3",
+    "grunt-contrib-imagemin": "~0.9.2",
+    "grunt-ftp-deploy": "~0.1.9"
   },
   "licenses": [
     {
